<resources>
    <string name="app_name">SurveySystem</string>

    <!--Auth Activity-->
    <string name="auth_activity_login_text">Login</string>
    <string name="auth_activity_signup_text">Sign Up</string>
    <string name="auth_activity_login_email_username_text">Email</string>
    <string name="auth_activity_login_password_text">Password</string>
    <string name="auth_activity_do_not_have_account_text">Don\'t have an account?</string>
    <string name="auth_activity_already_have_account_text">Already have an account?</string>
    <string name="auth_activity_login_successful_text">Login successful!</string>
    <string name="auth_activity_login_failed_text">Login failed! Please try again later</string>
    <string name="auth_activity_sign_up_successful_text">Registration successful!</string>
    <string name="auth_activity_sign_up_failed_text">Registration failed! Please try again later</string>
    <string name="auth_activity_sign_up_email_error_text">Invalid email format</string>
    <string name="auth_activity_sign_up_password_error_text">Password must contain at least one special character, one letter and one number, 8–16 length</string>

    <!--Survey Dashboard-->
    <string name="survey_dashboard_title">Dashboard</string>
    <string name="survey_dashboard_create_survey_text">Create Survey</string>
    <string name="survey_dashboard_view_report_text">View Report</string>

    <!--Create Survey-->
    <string name="create_survey_title_text">Title : </string>
    <string name="create_survey_title_hint_text">survey title</string>
    <string name="create_survey_outlet_text">Outlet : </string>
    <string name="create_survey_questions_text">Questions : </string>
    <string name="create_survey_save_and_submit_text">Save &amp; Submit</string>
    <string name="create_survey_add_option_text">Add Option</string>
    <string name="create_survey_question_hint_text">question title</string>
    <string name="create_survey_option_hint_text">option title</string>
    <string name="create_survey_save_text">Save</string>
    <string name="create_survey_add_question_text">Add Question</string>

    <string-array name="Outlet">
        <item>Kuala Lumpur</item>
        <item>Johor Bahru</item>
        <item>Penang</item>
        <item>Subang Jaya</item>
        <item>Puchong</item>
    </string-array>

    <!--Survey Details-->
    <string name="survey_details_name_text">Name</string>
    <string name="survey_details_age_text">Age</string>
</resources>