<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtCountSurveyQuestions"
            android:textColor="@color/black_32"
            android:textSize="16sp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etSurveyQuestionTitle"
            android:textColor="@color/black_32"
            android:textColorHint="@color/light_grey_a5"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:autofillHints="@null"
            android:hint="@string/create_survey_question_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroupSurveyOptions"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddOption"
        android:text="@string/create_survey_add_option_text"
        android:textColor="@color/pink_purple_e0"
        android:fontFamily="@font/poppins_bold"
        android:background="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_add_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/pink_purple_e0"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/layoutAddOption"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etOptionTitle"
            android:hint="@string/create_survey_option_hint_text"
            android:textColor="@color/black_32"
            android:textColorHint="@color/light_grey_a5"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:autofillHints="@null"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtSaveOption"
            android:text="@string/create_survey_save_text"
            android:textColor="@color/pink_purple_e0"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imgDeleteOption"
            android:src="@drawable/ic_delete"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            app:tint="@color/light_grey_a5" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddQuestion"
        android:text="@string/create_survey_add_question_text"
        android:textColor="@color/black_32"
        android:fontFamily="@font/poppins_bold"
        android:background="@color/white"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_add_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/black_32"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>